--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -37,6 +37,7 @@
 @import url("./core/navbar.css");
 @import url("./core/sidebar.css");
 @import url("./core/manga.css");
+@import url("./core/toast.css");
 
 /**
  * 5. PAGE-SPECIFIC STYLES
