--- a/Views/Manga/Details.cshtml
+++ b/Views/Manga/Details.cshtml
@@ -77,7 +77,7 @@
                                         </a>
                                     }
                                     
-                                    <button class="btn btn-theme-outline" id="followBtn" data-id="@Model.Manga.Id" data-following="@Model.Manga.IsFollowing.ToString().ToLower()" onclick="if(typeof toggleFollow === 'function') toggleFollow(this);">
+                                    <button class="btn btn-theme-outline" id="followBtn" data-id="@Model.Manga.Id" data-following="@Model.Manga.IsFollowing.ToString().ToLower()">
                                         @if (Model.Manga.IsFollowing)
                                         {
                                             <i class="bi bi-bookmark-check-fill me-2"></i><span>Đang theo dõi</span>
@@ -375,10 +375,6 @@
         </div>
     }
 </div>
-
-@section Scripts {
-    <script src="~/js/manga-details.js" type="module" asp-append-version="true"></script>
-}
 
 @functions {
     public string TranslateStatus(string status)
